--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,22 @@
 // Follow the order in the readme
+
+// imports variables
+@import "variables";
+
+// imports mixins
+@import "mixins";
+
+// imports reset for resetting css
+@import "reset";
+
+// imports global styles
+@import "global";
+
+// imports navigation styles
+@import "navigation";
+
+// imports footer style
+@import "footer";
+
+// imports home page style
+@import "home-page";
