--- a/less/index.less
+++ b/less/index.less
@@ -15,6 +15,9 @@
 // imports navigation styles
 @import "navigation";
 
+// imports for cta style
+@import "cta";
+
 // imports footer style
 @import "footer";
 
