--- a/less/home-page.less
+++ b/less/home-page.less
@@ -42,6 +42,8 @@
     width: 75%;
     margin: 0 auto 30px;
 
+    
+
     img {
       border-radius: 10px;
     }
@@ -56,6 +58,18 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      .btn {
+        background-color: @button-bg;
+        width: auto;
+        height: 15%;
+        margin-bottom: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 20px;
+        border-radius: 15px;
+      }
     }
   }
 }// home
