--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,19 @@
-// Navigation Styles here
+header {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px dashed @navigation-border;
+    h1 {
+        margin-bottom: 30px;
+    }
+    nav {
+            width: 40%;
+            display: flex;
+            justify-content: space-evenly;
+        a {
+            font-size: 16px;
+            color: black;
+            text-decoration: none;
+        }
+    }
+}
+
