--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,11 @@
 header {
+    @media (max-width: 500px) {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
     display: flex;
     justify-content: space-between;
     border-bottom: 2px dashed @navigation-border;
@@ -13,6 +20,15 @@ header {
             font-size: 16px;
             color: black;
             text-decoration: none;
+        }
+    }
+
+    @media(max-width: 500px) {
+        nav {
+            width: 90%;
+            display: flex;
+            align-content: space-around;
+            margin-bottom: 10px;
         }
     }
 }
