--- a/website/css/index.css
+++ b/website/css/index.css
@@ -173,6 +173,14 @@ header {
   justify-content: space-between;
   border-bottom: 2px dashed #C0C0C0;
 }
+@media (max-width: 500px) {
+  header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 header h1 {
   margin-bottom: 30px;
 }
@@ -185,6 +193,14 @@ header nav a {
   font-size: 16px;
   color: black;
   text-decoration: none;
+}
+@media (max-width: 500px) {
+  header nav {
+    width: 90%;
+    display: flex;
+    align-content: space-around;
+    margin-bottom: 10px;
+  }
 }
 .cta {
   border-bottom: 2px dashed #C0C0C0;
